config-k8/ingress-nginx.yaml
{
  "kind": "Deployment",
  "apiVersion": "extensions/v1beta1",
  "metadata": {
    "name": "nginx-ingress-controller",
    "namespace": "ingress-nginx",
    "selfLink": "/apis/extensions/v1beta1/namespaces/ingress-nginx/deployments/nginx-ingress-controller",
    "uid": "033d8c3d-b433-11e9-863a-d6e5c33f5cb5",
    "resourceVersion": "4669691",
    "generation": 4,
    "creationTimestamp": "2019-08-01T08:04:40Z",
    "labels": {
      "app": "ingress-nginx"
    },
    "annotations": {
      "deployment.kubernetes.io/revision": "4"
    }
  },
  "spec": {
    "replicas": 1,
    "selector": {
      "matchLabels": {
        "app": "ingress-nginx"
      }
    },
    "template": {
      "metadata": {
        "creationTimestamp": null,
        "labels": {
          "app": "ingress-nginx"
        },
        "annotations": {
          "prometheus.io/port": "10254",
          "prometheus.io/scrape": "true"
        }
      },
      "spec": {
        "containers": [
          {
            "name": "nginx-ingress-controller",
            "image": "quay.io/kubernetes-ingress-controller/nginx-ingress-controller:0.23.0",
            "args": [
              "/nginx-ingress-controller",
              "--configmap=$(POD_NAMESPACE)/nginx-configuration",
              "--tcp-services-configmap=$(POD_NAMESPACE)/tcp-services",
              "--udp-services-configmap=$(POD_NAMESPACE)/udp-services",
              "--publish-service=$(POD_NAMESPACE)/ingress-nginx",
              "--annotations-prefix=nginx.ingress.kubernetes.io"
            ],
            "ports": [
              {
                "name": "http",
                "containerPort": 80,
                "protocol": "TCP"
              },
              {
                "name": "https",
                "containerPort": 443,
                "protocol": "TCP"
              }
            ],
            "env": [
              {
                "name": "POD_NAME",
                "valueFrom": {
                  "fieldRef": {
                    "apiVersion": "v1",
                    "fieldPath": "metadata.name"
                  }
                }
              },
              {
                "name": "POD_NAMESPACE",
                "valueFrom": {
                  "fieldRef": {
                    "apiVersion": "v1",
                    "fieldPath": "metadata.namespace"
                  }
                }
              }
            ],
            "resources": {},
            "livenessProbe": {
              "httpGet": {
                "path": "/healthz",
                "port": 10254,
                "scheme": "HTTP"
              },
              "initialDelaySeconds": 10,
              "timeoutSeconds": 10,
              "periodSeconds": 10,
              "successThreshold": 1,
              "failureThreshold": 3
            },
            "readinessProbe": {
              "httpGet": {
                "path": "/healthz",
                "port": 10254,
                "scheme": "HTTP"
              },
              "timeoutSeconds": 10,
              "periodSeconds": 10,
              "successThreshold": 1,
              "failureThreshold": 3
            },
            "terminationMessagePath": "/dev/termination-log",
            "terminationMessagePolicy": "File",
            "imagePullPolicy": "Always",
            "securityContext": {
              "capabilities": {
                "add": [
                  "NET_BIND_SERVICE"
                ],
                "drop": [
                  "ALL"
                ]
              },
              "runAsUser": 33,
              "allowPrivilegeEscalation": true,
              "procMount": "Default"
            }
          }
        ],
        "restartPolicy": "Always",
        "terminationGracePeriodSeconds": 30,
        "dnsPolicy": "ClusterFirst",
        "serviceAccountName": "nginx-ingress-serviceaccount",
        "serviceAccount": "nginx-ingress-serviceaccount",
        "securityContext": {},
        "schedulerName": "default-scheduler"
      }
    },
    "strategy": {
      "type": "RollingUpdate",
      "rollingUpdate": {
        "maxUnavailable": "25%",
        "maxSurge": "25%"
      }
    },
    "revisionHistoryLimit": 10,
    "progressDeadlineSeconds": 600
  },
  "status": {
    "observedGeneration": 4,
    "replicas": 1,
    "updatedReplicas": 1,
    "readyReplicas": 1,
    "availableReplicas": 1,
    "conditions": [
      {
        "type": "Progressing",
        "status": "True",
        "lastUpdateTime": "2019-08-01T10:52:09Z",
        "lastTransitionTime": "2019-08-01T08:04:40Z",
        "reason": "NewReplicaSetAvailable",
        "message": "ReplicaSet \"nginx-ingress-controller-74f8976d57\" has successfully progressed."
      },
      {
        "type": "Available",
        "status": "True",
        "lastUpdateTime": "2019-08-01T15:28:55Z",
        "lastTransitionTime": "2019-08-01T15:28:55Z",
        "reason": "MinimumReplicasAvailable",
        "message": "Deployment has minimum availability."
      }
    ]
  }
}
